로컬환경에서 gradlew.bat test 테스팅 완료